--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,35 @@
     transform: rotate(360deg);
   }
 }
+
+
+body{
+  margin: 0px;
+}
+
+button{
+  border-width: 0px;
+  cursor: pointer;
+}
+
+input{
+  border-width: 0px;
+}
+
+input:focus{
+  outline: none;
+}
+
+
+li{
+  list-style-type: none;
+}
+
+ul{
+  padding-left: 0px;
+}
+
+p, h1,h2,h3,h4,h5,h6{
+  margin-top: 5px;
+  margin-bottom: 5px;
+}
